# terminal-weather-forcast

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: main.rs  weather.rs
